...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <segments>
                                    <segment title="♠️"/>
                                    <segment title="❤️"/>
                                    <segment title="♣️"/>
                                    <segment title="♦️"/>
                                </segments>
                                <connections>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Win Rate:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PHp-3b-1i0">
                                                    <rect key="frame" x="279.33333333333331" y="11.666666666666666" width="73.333333333333314" height="20.333333333333336"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="WinRate"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="322" y="111" width="49" height="80"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <state key="normal" title="ADD">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Hcz-MV-Gjl">
                                        <rect key="frame" x="0.0" y="0.0" width="50" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BoardImage1"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="50" id="w46-5m-5uX"/>
...
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardBackground" translatesAutoresizingMaskIntoConstraints="NO" id="h6l-dy-qSQ" userLabel="a1">
                                        <rect key="frame" x="0.0" y="0.0" width="50" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TableImage1"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="50" id="DRG-tp-jze"/>
...
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardBackground" translatesAutoresizingMaskIntoConstraints="NO" id="bR7-BW-ezs" userLabel="a2">
                                        <rect key="frame" x="50" y="0.0" width="50" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TableImage2"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="50" id="agD-Xl-hL5"/>
...
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardBackground" translatesAutoresizingMaskIntoConstraints="NO" id="QgU-Ua-Q1A" userLabel="a3">
                                        <rect key="frame" x="100" y="0.0" width="50" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TableImage3"/>
                                    </imageView>
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardBackground" translatesAutoresizingMaskIntoConstraints="NO" id="hWd-8N-dLE" userLabel="a4">
                                        <rect key="frame" x="150" y="0.0" width="50" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TableImage4"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="50" id="t2z-ef-yvt"/>
...
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardBackground" translatesAutoresizingMaskIntoConstraints="NO" id="vT6-w0-mHa" userLabel="a5">
                                        <rect key="frame" x="200" y="0.0" width="50" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TableImage5"/>
                                    </imageView>
                                </subviews>
...
