...
//
////    var return_player_card : [String: Any?] = ["LeftHand": nil,
////    "RightHand": nil]
//    var local_ImageCard : ImageCards?
//    var local_ImageCard_index: Int?
//
//    let newBackButton = UIBarButtonItem(title: "Done", style: UIBarButtonItem.Style.plain, target: self, action: #selector(simple_inputViewController.back(sender:)))
//
//    var delegate : SendMessageDelegate?
//
//    override func viewDidLoad() {
//        super.viewDidLoad()
//
...
